[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/nodes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/resources/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/levels/Tutorial.gd" type="Script" id=3]
[ext_resource path="res://scenes/nodes/ui/UIBar.tscn" type="PackedScene" id=4]

[node name="Tutorial" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 71.2552, 52.1476 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ChaosBar" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false
margin_left = 13.0
margin_right = 53.0
sprite_rect_x = 83
colored = true

[node name="TimeBar" parent="CanvasLayer" instance=ExtResource( 4 )]
visible = false

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -33.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 235.0
margin_bottom = 33.0
text = "Move around with WASD."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterLabel" type="Label" parent="CanvasLayer/Panel"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -10.0
text = "[ENTER]"

[node name="GooContainer" type="Node2D" parent="."]

[node name="GUI" type="CanvasLayer" parent="."]
